# autoresearch-multi

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  run.py
engine/: __init__.py  adaptive.py  backend.py  checkpoint.py  coordinator.py  dashboard.py  decompose.py  grid.py  hardware.py  llm_proposer.py  merge.py  scaling.py  semantic_diff.py  setup.py  variants.py
engine/backends/: __init__.py  gpu_training.py  tabular.py
engine/slots/: registry.py  runner.py
extras/telemetry/: __init__.py  collector.py
scripts/: install.sh
tests/: test_backend.py  test_gpu_e2e.py
tests/fixtures/gpu_project/: mock_train.py
tests/fixtures/gpu_project/variants/config/: baseline.rs  depth_12.rs  depth_12_lr_low.rs  depth_16.rs  lr_high.rs  lr_low.rs
