[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoresearch-multi"
version = "0.1.0"
description = "Combinatorial ML pipeline search with pruning, interaction detection, and LLM proposals"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Aliya Galimova"}]
keywords = ["machine-learning", "automl", "autoresearch", "hyperparameter-search"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "scikit-learn",
    "pandas",
    "numpy",
    "xgboost",
    "lightgbm",
]

[project.optional-dependencies]
torch = ["torch", "torchvision"]
keras = ["tensorflow"]
llm = ["anthropic"]
optuna = ["optuna"]
all = [
    "torch",
    "torchvision",
    "tensorflow",
    "anthropic",
    "optuna",
]

[project.scripts]
autoresearch = "run:main"

[project.urls]
Homepage = "https://github.com/agalimova/autoresearch-multi"
Repository = "https://github.com/agalimova/autoresearch-multi"

[tool.setuptools.packages.find]
include = ["engine*", "extras*"]

[tool.setuptools]
py-modules = ["run"]
